--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Edvininpolku</title>
+    <script src="assets/js/edvininpolku.js"></script>
   </head>
   <body>
   </body>
