added slideshow logic

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Edvininpolku</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/edvininpolku.css">
     <script src="assets/js/edvininpolku.js"></script>
   </head>
   <body>
+  <canvas id='canvas'></canvas>
   </body>
 </html>
