extracting exif metadata

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Edvininpolku</title>
     <link rel="stylesheet" type="text/css" href="assets/css/edvininpolku.css">
+    <script src="assets/vendor/js/exif-parser-0.1.12-min.js"></script>
     <script src="assets/js/edvininpolku.js"></script>
   </head>
   <body>
