--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <script src="assets/js/edvininpolku.js"></script>
   </head>
   <body>
-  <canvas id='canvas'></canvas>
-  <div id="map"></div>
+    <table>
+      <tr>
+        <td>
+          <canvas id='canvas'></canvas>
+        </td>
+        <td>
+          <div id="map"></div>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
