--- a/index.html
+++ b/index.html
@@ -3,6 +3,31 @@
   <head>
     <meta charset="UTF-8">
     <title>Edvininpolku</title>
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Park",
+      "name": "Edvininpolku",
+      "alternateName": "Edvin's Art Park",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": {
+          "@type": "Country",
+          "name": "FI"
+        },
+        "addressLocality": "Asevelikylä",
+        "addressRegion": "Vaasa",
+        "postalCode": "65300",
+        "streetAddress": "Aleksis Kiventie 59"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "63.105246",
+        "longitude": "21.664820"
+      },
+      "sameAs": "https://fi.wikipedia.org/wiki/Edvininpolku"
+    }
+    </script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
   integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
   crossorigin=""/>
