--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
     <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
   integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
   crossorigin=""></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127874216-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-127874216-1');
+    </script>
     <script src="assets/js/edvininpolku.js"></script>
   </head>
   <body>
