--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
           <aside class="sidebar">
             <div id="map"></div>
           </aside>
+          <aside id="sidebar-progress-bar" class="sidebar">
+            <div id="progress-bar">
+              <span id="progress-text">0%</span>
+              <div id="progress-graphic"></div>
+            </div>
+          </aside>
           <aside class="sidebar">
             <footer>
               <p>Created by <a href="https://simonarnell.github.io">Simon Arnell</a> 2019</p>
