--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-127874216-1');
     </script>
+    <script type="application/ld+json">{"@context":"http://schema.org","@type":"WebSite","headline":"Edvininpolku","url":"https://simonarnell.github.io/edvininpolku/","name":"Edvininpolku","author":{"@type":"Person","name":"Simon Arnell","url":"https://simonarnell.github.io/"},"image":"https://repository-images.githubusercontent.com/212882811/71f00c80-e6e4-11e9-8169-8f086e2f69a0","description":"A visual tour of Edvininpolku","about":{"@type":"Park","name":"Edvininpolku","alternateName":"Edvin's Art Park","address":{"@type":"PostalAddress","addressCountry":{"@type":"Country","name":"FI"},"addressLocality":"Asevelikylä","addressRegion":"Vaasa","postalCode":"65300","streetAddress":"Aleksis Kiventie 57"},"geo":{"@type":"GeoCoordinates","latitude":"63.105246","longitude":"21.664820"},"sameAs":["https://fi.wikipedia.org/wiki/Edvininpolku","https://www.vaasa.fi/asu-ja-ela/vapaa-aika/puistot-ja-viheralueet/puistot/edvininpolun-puisto/"]},"mentions":{"@type":"Person","name":"Edvin Hevonkoski","birthDate":"1923-09-10","birthPlace":{"@type":"Place","address":{"@type":"PostalAddress","addressCountry":{"@type":"Country","name":"FI"},"addressRegion":"Alavus"}},"deathDate":"2009-09-08","deathPlace":{"@type":"Place","address":{"@type":"PostalAddress","addressCountry":{"@type":"Country","name":"FI"},"addressRegion":"Vaasa"}},"sameAs":"https://en.wikipedia.org/wiki/Edvin_Hevonkoski"}}</script>
     <script src="assets/js/edvininpolku.js"></script>
   </head>
   <body>
