--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Edvininpolku</title>
     <link rel="canonical" href="https://simonarnell.github.io/edvininpolku/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="https://repository-images.githubusercontent.com/212882811/71f00c80-e6e4-11e9-8169-8f086e2f69a0">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Edvininpolku">
