added responsive layout

--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
       <article class="article">
         <div class="collection">
         </div>
-        <div class="sidebar-container">
-          <aside class="sidebar">
+        <aside class="sidebar-container">
+          <div class="sidebar">
             <div id="map"></div>
-          </aside>
-          <aside id="sidebar-progress-bar" class="sidebar">
+          </div>
+          <div id="sidebar-progress-bar" class="sidebar">
             <div id="progress-bar">
               <span id="progress-text">0%</span>
               <div id="progress-graphic"></div>
             </div>
-          </aside>
-          <aside class="sidebar">
+          </div>
+          <div class="sidebar">
             <footer>
               Copyright (c) 2020 <a href="https://simonarnell.github.io/">Simon Arnell</a> - Licensed under the <a href="https://github.com/simonarnell/edvininpolku/blob/master/LICENSE.md">MIT License</a>
             </footer>
-          </aside>
-        </div>
+          </div>
+        </aside>
       </article>
     </main>
   </body>
